[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/slime_enemy.png" type="Texture" id=1]
[ext_resource path="res://scenes/SlimeEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.1735, 33.0696 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.3218, 8.57445 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.0488, 27.6395 )

[node name="SlimeEnemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 289.739, 198.902 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 291.069, 223.95 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 289.109, 213.17 )
enabled = true

[node name="top_checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 289.782, 187.728 )
shape = SubResource( 2 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 289.738, 219.96 )
shape = SubResource( 3 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
